--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,13 @@
 {
   "short_name": "ToDoX2",
   "name": "To Do Listing App",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    }
-  ],
+  "icons": [{
+    "src": "favicon.svg",
+    "sizes": "64x64 32x32 24x24 16x16",
+    "type": "image/x-icon"
+  }],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#51A4FB",
+  "background_color": "#51A4FB"
 }
